--- a/WebApplication_AlquilerEquipos/Views/Home/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>AVENTURA EXPRESS</h1>
+    <h1>AVENTURA Hola</h1>
     <p class="lead">En AVENTURA EXPRESS conseguiras todos los equipos necesario para tus viajes familiares practicando deporte de aventura.</p>
     <p><a id="Home_btn_youtube" href="https://www.youtube.com/watch?v=euPLSi-sAk4" class="btn btn-danger btn-lg" target="_blank">Youtube</a></p>
 </div>
